# homeassistant-dte-current-price

./: LICENSE  README.md  RELEASE_NOTES.md  d1.1.yaml  d1.11.yaml  d1.2.yaml  d1.7.yaml  d1_1.yaml  d1_7.yaml  pscr_effective_date.txt  pscr_metadata.yaml  pyproject.toml  renovate.json  requirements.txt
.github/workflows/: test.yml  update-pscr.yml
.trunk/: trunk.yaml
rates/: data.yaml
scripts/: common.py  generate_rates.py  update_pscr.py
tests/: test_generate_rates.py  test_generated_yaml.py  test_pdf_extraction.py  test_update_pscr.py
